Adding suport for redis cluster using npm redis-node-cluster

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "redis": "0.9.x",
     "redis-sentinel": "0.0.x",
+    "redis-node-cluster": "*",
     "node-uuid": "~1.4.1"
   },
   "devDependencies": {
